overflow fix

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -160,6 +160,7 @@ footer {
 
 .overflow-hidden {
   overflow: hidden;
+  height: 100vh;
 }
 
 .opacity-zero {
